[package]
name = "reflectub"
version = "0.0.1"
edition = "2018"

[dependencies]
git2 = "0.13.20"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.6.1", features = ["macros", "rt"] }

[dependencies.sqlx]
version = "0.5.5"
features = ["chrono", "runtime-tokio-rustls", "sqlite"]
