[package]
name = "reflectub"
version = "0.0.1"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
exitcode = "1.1.2"
filetime = "0.2.14"
futures = { version = "0.3.15", features = ["thread-pool"] }
getopts = "0.2.21"
git2 = "0.13.20"
parse-size = { version = "1.0.0", features = ["std"] }
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.25"
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.5.5"
features = ["chrono", "runtime-tokio-rustls", "sqlite"]
