[package]
name = "reflectub"
version = "0.0.1"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
exitcode = "1.1.2"
filetime = "0.2.14"
getopts = "0.2.21"
git2 = "0.13.20"
parse-size = { version = "1.0.0", features = ["std"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
rayon = "1.5.1"
rusqlite = "0.25.3"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.25"
ureq = { version = "2.1.1", features = ["json"] }
